--- a/QLNS/ReportBCST.rdlc
+++ b/QLNS/ReportBCST.rdlc
@@ -380,7 +380,9 @@
                                   <Style />
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Left</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>MaSach</rd:DefaultName>
@@ -644,6 +646,7 @@
                       <Value>="Tháng: " &amp;Parameters!Thang.Value &amp; "/" &amp;Parameters!Nam.Value</Value>
                       <Style>
                         <FontStyle>Italic</FontStyle>
+                        <FontSize>12pt</FontSize>
                       </Style>
                     </TextRun>
                   </TextRuns>
@@ -695,11 +698,22 @@
                     <TextAlign>Center</TextAlign>
                   </Style>
                 </Paragraph>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Kí tên</Value>
+                      <Style />
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Center</TextAlign>
+                  </Style>
+                </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.06944in</Top>
               <Left>7.38936in</Left>
-              <Height>0.31375in</Height>
+              <Height>0.44917in</Height>
               <Width>1.69792in</Width>
               <Style>
                 <Border>
